--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="text20">20sp</dimen>
     <dimen name="text30">30sp</dimen>
 
+    <dimen name="padding_ecran">25sp</dimen>
+
 </resources>
