--- a/app/src/main/res/drawable/background_bottom_sheet.xml
+++ b/app/src/main/res/drawable/background_bottom_sheet.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- fundal Bottom Sheet -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
     <solid android:color="@color/fundal_alt" />
+
     <corners
         android:topLeftRadius="@dimen/radius30"
         android:topRightRadius="@dimen/radius30" />
