--- a/app/src/main/res/drawable/background_progress_dialog.xml
+++ b/app/src/main/res/drawable/background_progress_dialog.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- fundal Progress Dialog -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
     <solid android:color="@color/fundal_alt" />
+
     <corners android:radius="@dimen/radius20" />
 
 </shape>
