--- a/app/src/main/res/drawable/selector_bottom_navigation_menu.xml
+++ b/app/src/main/res/drawable/selector_bottom_navigation_menu.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- selector culori pentru icon-urile din Bottom Navigation Menu -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/primara" android:state_checked="true" />
     <item android:color="@color/text" />
