--- a/app/src/main/res/layout/layout_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/layout_spinner_dropdown_item.xml
@@ -1,15 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
+<?xml version="1.0" encoding="utf-8"?>
 
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+<!-- aspectspinner deschis (dropdown) -->
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background_text_field"
-    android:backgroundTint="@color/fundal_alt"
     android:ellipsize="marquee"
+    android:padding="15dp"
     android:singleLine="true"
     android:textColor="@color/text"
-    android:textSize="@dimen/text20"
-    android:padding="15dp"/>
+    android:textSize="@dimen/text20" />
+
