--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- array genuri muzicale -->
     <string-array name="array_genuri_muzicale">
         <item>EDM</item>
         <item>Dubstep</item>
