--- a/app/src/main/res/layout/activity_resetare_parola.xml
+++ b/app/src/main/res/layout/activity_resetare_parola.xml
@@ -30,7 +30,7 @@
             android:gravity="center_horizontal"
             android:text="Recuperare Cont"
             android:textColor="@color/primara"
-            android:textSize="@dimen/text30"
+            android:textSize="@dimen/text_mare"
             android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -50,17 +50,16 @@
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/resetare_parola_buttonReseteazaParola"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:padding="15dp"
+            android:background="@drawable/background_rotunjit"
+            android:backgroundTint="@color/primara"
             android:text="Resetează Parola"
             android:textColor="@color/text_pe_primara"
-            android:textSize="@dimen/text20"
-            app:backgroundTint="@color/primara"
-            app:cornerRadius="@dimen/radius20" />
+            android:textSize="@dimen/text_standard" />
 
     </LinearLayout>
 </ScrollView>
