--- a/app/src/main/res/layout/layout_categorie_carduri.xml
+++ b/app/src/main/res/layout/layout_categorie_carduri.xml
@@ -12,7 +12,7 @@
         android:paddingTop="10dp"
         android:text="Titlu Categorie"
         android:textColor="@color/text"
-        android:textSize="@dimen/text30"
+        android:textSize="@dimen/text_mare"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
