--- a/app/src/main/res/layout/layout_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/layout_spinner_dropdown_item.xml
@@ -8,5 +8,5 @@
     android:padding="15dp"
     android:singleLine="true"
     android:textColor="@color/text"
-    android:textSize="@dimen/text20" />
+    android:textSize="@dimen/text_standard" />
 
