--- a/app/src/main/res/layout/layout_spinner_item.xml
+++ b/app/src/main/res/layout/layout_spinner_item.xml
@@ -8,4 +8,4 @@
     android:singleLine="true"
     android:textAlignment="inherit"
     android:textColor="@color/text"
-    android:textSize="@dimen/text20" />
+    android:textSize="@dimen/text_standard" />
