--- a/app/src/main/res/layout/layout_progress_dialog.xml
+++ b/app/src/main/res/layout/layout_progress_dialog.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_progress_dialog"
+        android:background="@drawable/background_rotunjit"
+        android:backgroundTint="@color/fundal_alt"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="25dp">
@@ -25,7 +26,7 @@
             android:layout_marginTop="10dp"
             android:text="Se procesează"
             android:textColor="@color/text"
-            android:textSize="@dimen/text20"
+            android:textSize="@dimen/text_standard"
             android:textStyle="bold" />
 
     </LinearLayout>
