--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,14 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- dimensiuni rotunjire -->
-    <dimen name="radius15">15dp</dimen>
+    <!--<dimen name="radius15">15dp</dimen>-->
     <dimen name="radius20">20dp</dimen>
-    <dimen name="radius30">30dp</dimen>
+    <!--<dimen name="radius30">30dp</dimen>-->
 
     <!-- dimensiuni text -->
-    <dimen name="text15">15sp</dimen>
-    <dimen name="text20">20sp</dimen>
-    <dimen name="text30">30sp</dimen>
+    <dimen name="text_mic">15sp</dimen>
+    <dimen name="text_standard">20sp</dimen>
+    <dimen name="text_mare">30sp</dimen>
 
     <!-- dimensiuni spatiere -->
     <dimen name="padding_ecran">25sp</dimen>
