--- a/app/src/main/res/layout/layout_card_melodie.xml
+++ b/app/src/main/res/layout/layout_card_melodie.xml
@@ -23,6 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="Nume melodie"
         android:textColor="@color/text"
         android:textSize="@dimen/text_mic"
@@ -32,6 +34,8 @@
         android:id="@+id/card_melodie_textViewArtist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="Nume artist"
         android:textColor="@color/text_alt"
         android:textSize="@dimen/text_mic" />
