--- a/app/src/main/res/layout/fragment_adauga.xml
+++ b/app/src/main/res/layout/fragment_adauga.xml
@@ -7,10 +7,11 @@
     android:fillViewport="true"
     tools:context=".controller.fragment.AdaugaFragment">
 
+    <!-- layout container -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/padding_ecran">
 
