--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- culori tema luminoasa -->
     <color name="primara">#DC0000</color>
+    <color name="secundara">#FF8A8A</color>
     <color name="fundal">#FFFFFF</color>
     <color name="fundal_alt">#F2F2F2</color>
     <color name="text">#414141</color>
